temp/dashboard/dashboard-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /test-kibana
  # enable to use secure backend
    nginx.org/ssl-services: "kubernetes-dashboard"
spec:
  ingressClassName: nginx-plus
  tls:
  - hosts:
      - dashboard.f5demo.local
    secretName: dashboard-tls  
  rules:
  - host: dashboard.f5demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
